--- a/IAC/finance/Vagrantfile
+++ b/IAC/finance/Vagrantfile
@@ -12,7 +12,7 @@ Vagrant.configure("2") do |config|
 
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://vagrantcloud.com/search.
-  config.vm.box = "base"
+  config.vm.box = "eurolinux-vagrant/centos-stream-9"
 
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
@@ -32,12 +32,12 @@ Vagrant.configure("2") do |config|
 
   # Create a private network, which allows host-only access to the machine
   # using a specific IP.
-  # config.vm.network "private_network", ip: "192.168.33.10"
+    config.vm.network "private_network", ip: "192.168.33.10"
 
   # Create a public network, which generally matched to bridged network.
   # Bridged networks make the machine appear as another physical device on
   # your network.
-  # config.vm.network "public_network"
+    config.vm.network "public_network"
 
   # Share an additional folder to the guest VM. The first argument is
   # the path on the host to the actual folder. The second argument is
@@ -56,13 +56,14 @@ Vagrant.configure("2") do |config|
   # backing providers for Vagrant. These expose provider-specific options.
   # Example for VirtualBox:
   #
-  # config.vm.provider "virtualbox" do |vb|
+    config.vm.provider "virtualbox" do |vb|
   #   # Display the VirtualBox GUI when booting the machine
   #   vb.gui = true
   #
   #   # Customize the amount of memory on the VM:
-  #   vb.memory = "1024"
-  # end
+      vb.memory = "2048"
+      vb.cpus = "2"
+    end
   #
   # View the documentation for the provider you are using for more
   # information on available options.
@@ -70,8 +71,20 @@ Vagrant.configure("2") do |config|
   # Enable provisioning with a shell script. Additional provisioners such as
   # Ansible, Chef, Docker, Puppet and Salt are also available. Please see the
   # documentation for more information about their specific syntax and use.
-  # config.vm.provision "shell", inline: <<-SHELL
-  #   apt-get update
-  #   apt-get install -y apache2
-  # SHELL
+    config.vm.provision "shell", inline: <<-SHELL
+      sudo yum update
+      sudo yum install httpd wget unzip zip
+      sudo systemctl start httpd
+      sudo systemctl enable httpd
+      
+      cd /tmp
+      mkdir /tmp/finance
+      cd /tmp/finance
+      wget https://www.tooplate.com/zip-templates/2135_mini_finance.zip
+      unzip 2135_mini_finance.zip
+      cp -fr 2135_mini_finance/* /var/www/html
+      systemctl restart httpd
+      cd /tmp/
+      rm -fr /tmp/finance
+    SHELL
 end
