--- a/IAC/finance/Vagrantfile
+++ b/IAC/finance/Vagrantfile
@@ -73,7 +73,7 @@ Vagrant.configure("2") do |config|
   # documentation for more information about their specific syntax and use.
     config.vm.provision "shell", inline: <<-SHELL
       sudo yum update
-      sudo yum install httpd wget unzip zip
+      sudo yum install httpd wget unzip zip -y
       sudo systemctl start httpd
       sudo systemctl enable httpd
       
