--- a/IAC/wordpress/Vagrantfile
+++ b/IAC/wordpress/Vagrantfile
@@ -12,7 +12,7 @@ Vagrant.configure("2") do |config|
 
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://vagrantcloud.com/search.
-  config.vm.box = "base"
+  config.vm.box = "ubuntu/jammy64"
 
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
@@ -32,12 +32,12 @@ Vagrant.configure("2") do |config|
 
   # Create a private network, which allows host-only access to the machine
   # using a specific IP.
-  # config.vm.network "private_network", ip: "192.168.33.10"
+    config.vm.network "private_network", ip: "192.168.33.10"
 
   # Create a public network, which generally matched to bridged network.
   # Bridged networks make the machine appear as another physical device on
   # your network.
-  # config.vm.network "public_network"
+    config.vm.network "public_network"
 
   # Share an additional folder to the guest VM. The first argument is
   # the path on the host to the actual folder. The second argument is
@@ -56,13 +56,14 @@ Vagrant.configure("2") do |config|
   # backing providers for Vagrant. These expose provider-specific options.
   # Example for VirtualBox:
   #
-  # config.vm.provider "virtualbox" do |vb|
-  #   # Display the VirtualBox GUI when booting the machine
-  #   vb.gui = true
-  #
-  #   # Customize the amount of memory on the VM:
-  #   vb.memory = "1024"
-  # end
+    config.vm.provider "virtualbox" do |vb|
+      # Display the VirtualBox GUI when booting the machine
+      # vb.gui = true
+    
+      # Customize the amount of memory on the VM:
+      vb.memory = "3000"
+      vb.cpus = "2"
+    end
   #
   # View the documentation for the provider you are using for more
   # information on available options.
@@ -70,8 +71,85 @@ Vagrant.configure("2") do |config|
   # Enable provisioning with a shell script. Additional provisioners such as
   # Ansible, Chef, Docker, Puppet and Salt are also available. Please see the
   # documentation for more information about their specific syntax and use.
-  # config.vm.provision "shell", inline: <<-SHELL
-  #   apt-get update
-  #   apt-get install -y apache2
-  # SHELL
+    config.vm.provision "shell", inline: <<-SHELL
+      # updating server
+      sudo apt update
+
+      # Installing dependencies
+      sudo apt install apache2 \
+                      ghostscript \
+                      libapache2-mod-php \
+                      mysql-server \
+                      php \
+                      php-bcmath \
+                      php-curl \
+                      php-imagick \
+                      php-intl \
+                      php-json \
+                      php-mbstring \
+                      php-mysql \
+                      php-xml \
+                      php-zip -y
+      # Creating wordpress folder and downloading wordpress
+      sudo mkdir -p /srv/www
+      sudo chown www-data: /srv/www
+      curl https://wordpress.org/latest.tar.gz | sudo -u www-data tar zx -C /srv/www
+
+      # configuring Wordpress site
+      cat > /etc/apache2/sites-available/wordpress.conf <<EOF
+<VirtualHost *:80>
+    DocumentRoot /srv/www/wordpress
+    <Directory /srv/www/wordpress>
+        Options FollowSymLinks
+        AllowOverride Limit Options FileInfo
+        DirectoryIndex index.php
+        Require all granted
+    </Directory>
+    <Directory /srv/www/wordpress/wp-content>
+        Options FollowSymLinks
+        Require all granted
+    </Directory>
+</VirtualHost>
+EOF
+
+      # Enabling wordpress site
+      sudo a2ensite wordpress
+
+      # Enabling URL rewrite
+      sudo a2enmod rewrite
+
+      # Disable default site
+      sudo a2dissite 000-default
+
+      # Restarting apache2
+      sudo service apache2 reload
+
+      # Configuring mysql for wordpress
+      # Creating database wordpress
+      mysql -u root -e 'CREATE DATABASE wordpress;'
+
+      # Creating user for wordpress
+      mysql -u root -e 'CREATE USER wordpress@localhost IDENTIFIED BY "admin123";'
+
+      # Grant privileges to user
+      mysql -u root -e 'GRANT SELECT,INSERT,UPDATE,DELETE,CREATE,DROP,ALTER ON wordpress.* TO wordpress@localhost;'
+
+      # Flush privileges
+      mysql -u root -e 'FLUSH PRIVILEGES;'
+
+      # configure wordpress to connect to database
+      sudo -u www-data cp /srv/www/wordpress/wp-config-sample.php /srv/www/wordpress/wp-config.php
+
+      # update credentials for wordpress 
+      sudo -u www-data sed -i 's/database_name_here/wordpress/' /srv/www/wordpress/wp-config.php
+      sudo -u www-data sed -i 's/username_here/wordpress/' /srv/www/wordpress/wp-config.php
+      sudo -u www-data sed -i 's/password_here/admin123/' /srv/www/wordpress/wp-config.php
+
+      # Restart mysql service
+      systemclt restart mysql
+
+      # Restart apache2 service
+      systemctl restart apache2
+
+    SHELL
 end
