--- a/bashscript/Vagrantfile
+++ b/bashscript/Vagrantfile
@@ -7,6 +7,7 @@ Vagrant.configure("2") do |config|
         scriptbox.vm.synced_folder "C:/Users/charm/Downloads/kubernetes_repo", "/vagrant_data"
         scriptbox.vm.provider "virtualbox" do |vb|
             vb.memory = "1024"
+            vb.name = "scriptbox"
         end
     end
 
@@ -14,17 +15,29 @@ Vagrant.configure("2") do |config|
         web01.vm.box = "geerlingguy/centos7"
         web01.vm.network "private_network", ip: "192.168.10.13"
         web01.vm.hostname = "web01"
+        web01.vm.provider "virtualbox" do |vb|
+            vb.name = "web01"
+            vb.memory = "2048" 
+        end
     end
     
     config.vm.define "web02" do |web02|
         web02.vm.box = "geerlingguy/centos7"
         web02.vm.network "private_network", ip: "192.168.10.14"
         web02.vm.hostname = "web02"
+        web02.vm.provider "virtualbox" do |vb|
+            vb.name = "web02"
+            vb.memory = "2048"
+        end
     end
 
     config.vm.define "web03" do |web03|
         web03.vm.box = "ubuntu/bionic64"
         web03.vm.network "private_network", ip: "192.168.10.15"
         web03.vm.hostname = "web03"
+        web03.vm.provider "virtualbox" do |vb|
+            vb.name = "web03"
+            vb.memory = "2048"
+        end
     end
 end
