--- a/Ansible/Vagrantfile
+++ b/Ansible/Vagrantfile
@@ -11,30 +11,33 @@ Vagrant.configure("2") do |config|
         end
     end
 
-    config.vm.define "web01" do |web01|
-        web01.vm.box = "geerlingguy/centos7"
-        web01.vm.network "private_network", ip: "192.168.10.13"
-        web01.vm.hostname = "web01"
-        web01.vm.provider "virtualbox" do |vb|
-            vb.name = "web01"
+    config.vm.define "node01" do |node01|
+        node01.vm.box = "geerlingguy/centos7"
+        node01.vm.network "private_network", ip: "192.168.10.13"
+        node01.vm.hostname = "node01"
+        node01.vm.provider "virtualbox" do |vb|
+            vb.name = "node01"
+            vb.memory = "2048"
         end
     end
     
-    config.vm.define "web02" do |web02|
-        web02.vm.box = "geerlingguy/centos7"
-        web02.vm.network "private_network", ip: "192.168.10.14"
-        web02.vm.hostname = "web02"
-        web02.vm.provider "virtualbox" do |vb|
-            vb.name = "web02"
+    config.vm.define "node02" do |node02|
+        node02.vm.box = "geerlingguy/centos7"
+        node02.vm.network "private_network", ip: "192.168.10.14"
+        node02.vm.hostname = "node02"
+        node02.vm.provider "virtualbox" do |vb|
+            vb.name = "node02"
+            vb.memory = "2048"
         end
     end
 
-    config.vm.define "web03" do |web03|
-        web03.vm.box = "geerlingguy/centos7"
-        web03.vm.network "private_network", ip: "192.168.10.15"
-        web03.vm.hostname = "db01"
-        web03.vm.provider "virtualbox" do |vb|
-            vb.name = "web03"
+    config.vm.define "node03" do |node03|
+        node03.vm.box = "geerlingguy/centos7"
+        node03.vm.network "private_network", ip: "192.168.10.15"
+        node03.vm.hostname = "node03"
+        node03.vm.provider "virtualbox" do |vb|
+            vb.name = "node03"
+            vb.memory = "2048"
         end
     end
 end
