update code to delete anonymous user

--- a/Ansible/excercise/05/db.yml
+++ b/Ansible/excercise/05/db.yml
@@ -1,7 +1,7 @@
 ---
 - name: Setup DbServer
   hosts: dbservers
-  become: yes
+  # become: yes
   tasks:
     - name: Install MySQL DbServer
       yum: 
