--- a/Ansible/Vagrantfile
+++ b/Ansible/Vagrantfile
@@ -22,7 +22,7 @@ Vagrant.configure("2") do |config|
     end
     
     config.vm.define "node02" do |node02|
-        node02.vm.box = "geerlingguy/centos7"
+        node02.vm.box = "ubuntu/bionic64"
         node02.vm.network "private_network", ip: "192.168.10.14"
         node02.vm.hostname = "node02"
         node02.vm.provider "virtualbox" do |vb|
